(#667) fixed image cut off for gdoc

--- a/app/assets/stylesheets/print/gdoc/lesson/_image-wrap.scss
+++ b/app/assets/stylesheets/print/gdoc/lesson/_image-wrap.scss
@@ -3,15 +3,11 @@
     background: $ub-white;
 
     img {
-      // display: inline-block;
-      // height: auto !important;
-      // width: 70% !important;
       display: block;
       height: auto !important;
       max-width: 100% !important;
     }
   }
 
-  @include e(s)   { width: 15%; }
-  @include e(img) { width: 70%; }
+  @include e(img) { width: 100%; }
 }
